<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/duvidas_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DuvidasActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarDuvidas"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/faq_title"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Pergunta 1 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_a1"
                android:textSize="14sp"
                android:paddingTop="4dp" />

            <!-- Pergunta 2 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_q2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_a2"
                android:textSize="14sp"
                android:paddingTop="4dp" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
